# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
data/: readme.txt
digit-recognition/: config.yaml  infer.py  train.py
digit-recognition/data/: dataset.py
digit-recognition/model/: .gitignore  model.py
digit-recognition/model/checkpoints/: .gitignore  mnist_cnn_best.ckpt.dvc
ml_utils/: model.py  utils.py
results/: .gitignore  mnist_cnn.ckpt.dvc  predictions.csv  readme.txt
